[tool.poetry]
name = "homebridge-prometheus-exporter"
version = "0.2.1"
description = ""
authors = []
packages = [
    { include = "homebridge-prometheus-exporter" }
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.5"
beautifulsoup4 = "^4.10.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
Flask-APScheduler = "^1.13.1"
prometheus-flask-exporter = "^0.18.5"
tzlocal = "<3.0"
gunicorn = "^20.1.0"
werkzeug = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
pytest = "^7.3.1"
responses = "^0.21.0"
freezegun = "^1.2.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
